fleet/homepage/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/oshyuni93/homepage/backend:v1.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: homepage
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
